--- a/.env.example
+++ b/.env.example
@@ -19,11 +19,11 @@ JOOMLA_IMAGE_TAG=joomla:3.10.12-php7.4-apache
 JOOMLA_DB_NAME=joomladb
 COUNTRIES_DB_NAME=tapcomad_sndbxnp
 JOOMLA_DB_USER=joomladbbuser
-JOOMLA_DB_PASSWORD=XD8YowgYuwhYBfNcKbRG
-JOOMLA_DB_ADMIN_PASSWORD=DFsmVC5uOGyXTjkoRfRE
+JOOMLA_DB_PASSWORD=
+JOOMLA_DB_ADMIN_PASSWORD=
 JOOMLA_BLOG_NAME=Joomla
 JOOMLA_ADMIN_USERNAME=koadmin
-JOOMLA_ADMIN_PASSWORD=mKrK2024
+JOOMLA_ADMIN_PASSWORD=
 JOOMLA_ADMIN_EMAIL=retryjoinpl@gmail.com
 JOOMLA_HOSTNAME=tapflo.space
 JOOMLA_SMTP_ADDRESS=smtp-relay.gmail.com
